src/main/java/com/example/springbootapp/error/ErrorDetail.java
package com.example.springbootapp.error;

public abstract class ErrorDetail {
}
